--- a/front/src/styles/TopArtists.css
+++ b/front/src/styles/TopArtists.css
@@ -272,7 +272,7 @@ body, html {
     margin-bottom: 0.5rem;
   }
   .artist-grid-card,
-  .artist-list-item {
+  .artist-list-item-1 {
     opacity: 0;
     animation: fadeInUp 0.7s cubic-bezier(.22,.61,.36,1) forwards;
   }
@@ -282,7 +282,7 @@ body, html {
     }
   
   .artist-grid-card:hover,
-  .artist-list-item:hover {
+  .artist-list-item-1:hover {
       box-shadow:
       0 8px 32px 0 rgba(0,0,0,0.32),
       0 0 0 4px rgba(255,255,255,0.18), /* white glow border */
