--- a/front/src/styles/TopSongs.css
+++ b/front/src/styles/TopSongs.css
@@ -277,7 +277,7 @@ body, html {
     margin-bottom: 0.5rem;
   }
   .song-grid-card,
-  .song-list-item {
+  .song-list-item-1 {
     opacity: 0;
     animation: fadeInUp 0.7s cubic-bezier(.22,.61,.36,1) forwards;
   }
@@ -287,7 +287,7 @@ body, html {
     }
   
   .song-grid-card:hover,
-  .song-list-item:hover {
+  .song-list-item-1:hover {
       box-shadow:
       0 8px 32px 0 rgba(0,0,0,0.32),
       0 0 0 4px rgba(255,255,255,0.18), /* white glow border */
@@ -296,14 +296,14 @@ body, html {
       z-index: 2;
   }
 
-  .song-grid-name, .song-list-title {
+  .song-grid-name, .song-list-title-1 {
     font-size: 1.2rem;
     font-weight: 600;
     margin-top: 0.5rem;
     color: #fff;
   }
   
-  .song-grid-title, .song-list-name {
+  .song-grid-title, .song-list-name-1 {
     color: #b3b3b3;
     font-size: 1rem;
     margin-top: 0.2rem;
